fixing footer and mobile view

--- a/financial-accounting.html
+++ b/financial-accounting.html
@@ -275,7 +275,7 @@ maximum-scale=1.0, user-scalable=no" />
     <div class="container">
         <div class="footer-cta pt-5 pb-5">
             <div class="row">
-                <div class="col-xl-3 col-md-4 mb-30">
+                <div class="col-sm-4">
                     <div class="single-cta">
                         <i class="fas fa-map-marker-alt"></i>
                         <div class="cta-text">
@@ -288,37 +288,57 @@ maximum-scale=1.0, user-scalable=no" />
                                 Directions on map</a>
                         </div>
                     </div>
+                    <br>
+
                 </div>
-                <div class="col-xl-3 col-md-4 mb-30">
-                    <div class="single-cta">
-                        <i class="fas fa-phone"></i>
-                        <div class="cta-text">
-                            <h4>Call us</h4>
-                            <span>0135-2760177</span>
-                        </div>
-                    </div>
+
+                <div class="col-sm-4">
+                    <div class="footer-call-fix">
+                        <div class="single-cta">
+                            <i class="fa fa-phone" aria-hidden="true"></i>
+                            <div class="cta-text">
+                                <h4>Call us</h4>
+                                <span>0135-2760177</span><br>
+                                <span>+91-7895977777</span>
+
+                            </div>
+                        </div></div>
                 </div>
-                <div class="col-xl-3 col-md-4 mb-30">
+                <div class="col-sm-4">
                     <div class="single-cta">
-                        <i class="far fa-envelope-open"></i>
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
                         <div class="cta-text">
                             <h4>Mail us</h4>
+                            <span>admin@finsurety.com</span><br>
                             <span>akashkhanduja@finsurety.com</span>
                         </div>
-                    </div>
-                </div>
-                <div class="col-xl-3 col-md-4 mb-30">
-                    <div class="single-cta">
+                        <br>
                         <div class="cta-text">
-                            <h4>Follow Us</h4>
                             <br>
+                            <h4>Follow Us</h4>
                             <a class="fa fa-linkedin"
                                href="https://www.linkedin.com/company/finsurety-advisors-llp/"></a>
                             <a class="fa fa-instagram" href="https://www.instagram.com/finsuretyadvisors/"></a>
                             <a class="fa fa-facebook" href="#"></a>
                         </div>
                     </div>
+                    <br>
+
+                    <br>
+
                 </div>
+                <!--                <div class="col">-->
+                <!--                    <div class="single-cta">-->
+                <!--                        <div class="cta-text">-->
+                <!--                            <h4>Follow Us</h4>-->
+                <!--                            <br>-->
+                <!--                            <a class="fa fa-linkedin"-->
+                <!--                               href="https://www.linkedin.com/company/finsurety-advisors-llp/"></a>-->
+                <!--                            <a class="fa fa-instagram" href="https://www.instagram.com/finsuretyadvisors/"></a>-->
+                <!--                            <a class="fa fa-facebook" href="#"></a>-->
+                <!--                        </div>-->
+                <!--                    </div>-->
+                <!--                </div>-->
             </div>
         </div>
         <!--        <div class="footer-content pt-5 pb-5">-->
@@ -401,7 +421,6 @@ maximum-scale=1.0, user-scalable=no" />
         </div>
     </div>
 </div>
-
 
 
 </body>
