--- a/the-firm.html
+++ b/the-firm.html
@@ -12,14 +12,15 @@ maximum-scale=1.0, user-scalable=no"/>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-    <script src="script.js"></script>
-    <!--<script  src="javascriptfile.js"></script>-->
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!--    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">-->
+
     <link rel="stylesheet" href="nav-mob.css">
     <script src="nav-mob.js"></script>
 
@@ -143,7 +144,7 @@ maximum-scale=1.0, user-scalable=no"/>
         </div>
     </div>
 </div>
-<div class="body-text" style="text-align: justify; text-justify:inter-word;">
+<div class="body-text-2" style="text-align: justify; text-justify:inter-word;">
     <h2>The Firm</h2>
     <p>Finsurety Advisors LLP which stands for ‘Financial Surety & Security’ for our clients is what we as a firm aim at
         achieving. Co-founded by two Chartered Accountants, Finsurety Advisors seeks to provide a one stop solution for
@@ -212,7 +213,7 @@ maximum-scale=1.0, user-scalable=no"/>
     <div class="container">
         <div class="footer-cta pt-5 pb-5">
             <div class="row">
-                <div class="col-xl-3 col-md-4 mb-30">
+                <div class="col-sm-4">
                     <div class="single-cta">
                         <i class="fas fa-map-marker-alt"></i>
                         <div class="cta-text">
@@ -225,37 +226,57 @@ maximum-scale=1.0, user-scalable=no"/>
                                 Directions on map</a>
                         </div>
                     </div>
+                    <br>
+
                 </div>
-                <div class="col-xl-3 col-md-4 mb-30">
+
+                <div class="col-sm-4">
+                    <div class="footer-call-fix">
                     <div class="single-cta">
-                        <i class="fas fa-phone"></i>
+                        <i class="fa fa-phone" aria-hidden="true"></i>
                         <div class="cta-text">
                             <h4>Call us</h4>
-                            <span>0135-2760177</span>
+                            <span>0135-2760177</span><br>
+                            <span>+91-7895977777</span>
+
                         </div>
-                    </div>
+                    </div></div>
                 </div>
-                <div class="col-xl-3 col-md-4 mb-30">
+                <div class="col-sm-4">
                     <div class="single-cta">
-                        <i class="far fa-envelope-open"></i>
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
                         <div class="cta-text">
                             <h4>Mail us</h4>
+                            <span>admin@finsurety.com</span><br>
                             <span>akashkhanduja@finsurety.com</span>
                         </div>
-                    </div>
-                </div>
-                <div class="col-xl-3 col-md-4 mb-30">
-                    <div class="single-cta">
+                        <br>
                         <div class="cta-text">
-                            <h4>Follow Us</h4>
                             <br>
+                            <h4>Follow Us</h4>
                             <a class="fa fa-linkedin"
                                href="https://www.linkedin.com/company/finsurety-advisors-llp/"></a>
                             <a class="fa fa-instagram" href="https://www.instagram.com/finsuretyadvisors/"></a>
                             <a class="fa fa-facebook" href="#"></a>
                         </div>
                     </div>
+                    <br>
+
+                    <br>
+
                 </div>
+<!--                <div class="col">-->
+<!--                    <div class="single-cta">-->
+<!--                        <div class="cta-text">-->
+                <!--                            <h4>Follow Us</h4>-->
+<!--                            <br>-->
+<!--                            <a class="fa fa-linkedin"-->
+<!--                               href="https://www.linkedin.com/company/finsurety-advisors-llp/"></a>-->
+<!--                            <a class="fa fa-instagram" href="https://www.instagram.com/finsuretyadvisors/"></a>-->
+<!--                            <a class="fa fa-facebook" href="#"></a>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
             </div>
         </div>
         <!--        <div class="footer-content pt-5 pb-5">-->
