content update and images update

--- a/internal-audit.html
+++ b/internal-audit.html
@@ -135,7 +135,8 @@ maximum-scale=1.0, user-scalable=no" />
     <div class="main-bg">
         <div class="bg-auditing-assurance"></div>
         <div class="centered main-text-heading">
-            Statutory &amp; Tax Audit
+            Internal Audit &amp; <br> Investigative Audit
+
         </div>
     </div>
 </div>
@@ -192,71 +193,41 @@ maximum-scale=1.0, user-scalable=no" />
         </div>
         <div class="col-sm-9 pane-right">
             <div class="body-text-2">
-                <h2>Our approach to carrying out a Statutory Audit and/or Tax Audit</h2>
+                <h3>Internal Audit as a way to mitigate risks</h3>
 
-                <p>The auditing sector has been under tremendous scrutiny recently, with the government calling for reform following the collapse of high-profile firms whose audits have been called into question. Clearly it's vital that auditors recognise and report on any issues that emerge from the auditing process, so that any problems in the business can be addressed.
+                <p>Internal audit is an independent management function, which involves a continuous and critical appraisal of the functioning of an entity with a view to suggesting improvements thereto and adding value to and strengthening the overall governance mechanism of the entity, including the entity’s strategic risk management and internal control system.
                 </p>
-                <p>A statutory audit is key to sustaining confidence in both your company and the financial system at large. It must keep pace with a fast-evolving corporate reporting environment – one characterised by investor scepticism and the 24/7 scrutiny of corporate information including non-financial information, while also meeting investor expectations with the completeness, accuracy and fair presentation of information in your financial statements and disclosures.
+                <p>At Finsurety Advisors, we help an organization accomplish its objectives by bringing a systematic, disciplined approach to evaluating and improving the effectiveness of risk management, control, and governance processes. With commitment to integrity and accountability, we provide value to the senior management as an objective source of independent advice.
                 </p>
-                <p>At Finsurety Advisors, we work hard to provide an exceptional audit service, developing a deep understanding of individual businesses and offering proactive advice and insight that goes beyond the basic requirements while also meeting the timelines.
+                Our internal audit services include services not limited to:
+<ul style="padding-left: 40px">
+                <li>Management support for Internal Financial Controls (IFCs) testing and development of Standard Operating Procedures (SOPs).
+
+                <li>Reviewing the risk control matrix and suggesting the process and operational improvements to mitigate risks
+
+               <li>Reviewing operations, policies, and procedures and assisting the management in establishing better policies and procedures
+</ul><p>
+                Our wide range of internal auditing services  cater to many types of businesses including but not limited to banks, industries, firms etc.
+            </p>
+
+                <h3>Investigative Audit/Forensic Audit</h3>
+
+                <p>Forensic audit involves specialised accounting skills to investigate the fraud or embezzlement concerns and to analyze financial information critically. Our team of experts ensures that we perform a forensic audit with utmost sincerity:
                 </p>
-                <p>With our team of professionals, who have a deep understanding of the requirements and reporting requirements under the Companies Act, 2013, The Income Tax Act, 1961 just to name a few, we ensure that the audits are performed with utmost professionalism while covering all the aspects as required by the said laws.
-                </p>
-                Our aim is to have as minimal impact as possible on the client’s day-to-day business, while maintaining a thorough approach that includes:
-                <ul style="font-weight: bold;padding-left: 40px">
-                    <li>Inspecting documents
-                    <li>Re-performing calculations
-                    <li>Sending questionnaires, surveys, checklists
-                    <li>Reviewing and reporting on controls and systems
-                    <li>Timely filing of various Forms & Returns
+                <ul style="padding-left:40px">
+                <li>Identification of High Risk areas</li>
+                    <li>Testing of transactions and/or domains susceptible to fraud</li>
+                    <li>Mapping of Transaction Trails</li>
+                    <li>Testing Authenticity of Documents</li>
+                    <li>Preparation of Reconciliations</li>
+                    <li>Interviews with Employees & Vendors</li>
+                    <li>Preparation of Fraud Reports</li>
+                    <li>Implementation of Control System for Prevention & Detection</li>
                 </ul>
-
-                <p>Ultimately, this is a positive process that helps ensure best practice and future growth of an organisation.</p>
-
-
                 <br>
                 <br>
                 <br>
                 <br>
-                <!--                <hr style="height:2px;color:gray;background-color:gray;text-align:left;width:100%;margin-left:0">-->
-                <!--                <br>-->
-                <!--                <h4>Reporting Partners</h4>-->
-                <!--                <div class="row">-->
-                <!--                    <div class="col-sm-4">-->
-                <!--                        <img src="https://image.shutterstock.com/image-vector/businessman-icon-260nw-561625345.jpg">-->
-                <!--                        <br>-->
-                <!--                        <h5>Nitish Mittal</h5>-->
-                <!--                        Partner – Audit & Assurance Services-->
-                <!--                        <br>-->
-                <!--                        Experience: 20 years-->
-                <!--                        <br>-->
-                <!--                        Specializes in Audit, Accounting & Assurance-->
-                <!--                        <br>-->
-                <!--                        Former Sr. Manager, EY India (Assurance)-->
-                <!--                        <br>-->
-                <!--                        <a href="mailto:nitish.mittal@coinmen.in">nitish.mittal@coinmen.in</a>-->
-                <!--                        <br>-->
-                <!--                        <a href="#f">Follow on Linkedin</a>-->
-                <!--                        <br>-->
-                <!--                    </div>-->
-                <!--                    <div class="col-sm-4">-->
-                <!--                        <img src="https://image.shutterstock.com/image-vector/businessman-icon-260nw-561625345.jpg">-->
-                <!--                        <br>-->
-                <!--                        <h5>Nitish Mittal</h5>-->
-                <!--                        Partner – Audit & Assurance Services-->
-                <!--                        <br>-->
-                <!--                        Experience: 20 years-->
-                <!--                        <br>-->
-                <!--                        Specializes in Audit, Accounting & Assurance-->
-                <!--                        <br>-->
-                <!--                        Former Sr. Manager, EY India (Assurance)-->
-                <!--                        <br>-->
-                <!--                        <a href="mailto:nitish.mittal@coinmen.in">nitish.mittal@coinmen.in</a>-->
-                <!--                        <br>-->
-                <!--                        <a href="#f">Follow on Linkedin</a>-->
-                <!--                        <br>-->
-                <!--                    </div>-->
-                <!--                </div>-->
             </div>
         </div>
 
