--- a/our-team.html
+++ b/our-team.html
@@ -137,7 +137,7 @@ maximum-scale=1.0, user-scalable=no"/>
 <div class="nav-ht-fix"></div>
 <div>
     <div class="main-bg">
-        <div class="bg-tax-regulatory "></div>
+        <div class="bg-our-team "></div>
         <div class="centered main-text-heading">
             Our
             Team
@@ -160,8 +160,8 @@ maximum-scale=1.0, user-scalable=no"/>
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-3">
-                <img src="https://image.shutterstock.com/image-vector/businessman-icon-260nw-561625345.jpg" height="80%"
-                     style="text-align: center;">
+                <img src="images/male.jpeg" style="text-align: center;max-width:100%; max-height:100%;">
+<br><br>
             </div>
             <div class="col-sm-9">
                 <div class="">
@@ -180,11 +180,12 @@ maximum-scale=1.0, user-scalable=no"/>
                 </div>
             </div>
         </div>
+        <br>
+        <br>
         <div class="row">
             <div class="col-sm-3">
-                <img src="https://image.shutterstock.com/image-vector/businessman-icon-260nw-561625345.jpg" height="80%"
-                     style="text-align: center;">
-            </div>
+                <img src="images/Juhi.jpeg" style="text-align: center;max-width:100%; max-height:100%;">
+            <br><br></div>
             <div class="col-sm-9">
                 <div class="">
                     <h4>Ms Juhi Aggarwal </h4>
@@ -203,11 +204,11 @@ maximum-scale=1.0, user-scalable=no"/>
         </div>
 
         <br>
+        <br>
         <div class="row">
             <div class="col-sm-3">
-                <img src="https://image.shutterstock.com/image-vector/businessman-icon-260nw-561625345.jpg" height="80%"
-                     style="text-align: center;">
-            </div>
+                <img src="images/Nidhi.jpeg" style="text-align: center;max-width:100%; max-height:100%;">
+           <br> <br></div>
             <div class="col-sm-9">
                 <div class="">
                     <h4>Ms Nidhi Solanki </h4>
@@ -221,10 +222,12 @@ maximum-scale=1.0, user-scalable=no"/>
                 </div>
             </div>
         </div>
+        <br>
+        <br>
         <div class="row">
             <div class="col-sm-3">
-                <img src="https://image.shutterstock.com/image-vector/businessman-icon-260nw-561625345.jpg" height="80%"
-                     style="text-align: center;">
+                <img src="images/female.jpeg" style="text-align: center;max-width:100%; max-height:100%;">
+                <br><br>
             </div>
             <div class="col-sm-9">
                 <div class="">
