--- a/sectors.html
+++ b/sectors.html
@@ -137,7 +137,7 @@ maximum-scale=1.0, user-scalable=no" />
 <div class="nav-ht-fix"></div>
 <div>
   <div class="main-bg">
-    <div class="bg-careers "></div>
+    <div class="bg-sectors "></div>
     <div class="centered main-text-heading">
       Industries & Sectors
     </div>
