--- a/the-firm.html
+++ b/the-firm.html
@@ -138,13 +138,13 @@ maximum-scale=1.0, user-scalable=no"/>
 <div class="nav-ht-fix"></div>
 <div>
     <div class="main-bg">
-        <div class="bg-tax-regulatory "></div>
+        <div class="bg-the-firm "></div>
         <div class="centered main-text-heading">
             The Firm &amp; Our Partners
         </div>
     </div>
 </div>
-<div class="body-text-2" style="text-align: justify; text-justify:inter-word;">
+<div class="body-text" style="text-align: justify; text-justify:inter-word;">
     <h2>The Firm</h2>
     <p>Finsurety Advisors LLP which stands for ‘Financial Surety & Security’ for our clients is what we as a firm aim at
         achieving. Co-founded by two Chartered Accountants, Finsurety Advisors seeks to provide a one stop solution for
@@ -162,8 +162,9 @@ maximum-scale=1.0, user-scalable=no"/>
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-3">
-                <img src="https://image.shutterstock.com/image-vector/businessman-icon-260nw-561625345.jpg" height="250px"
-                     style="text-align: right;">
+                <img src="images/male.jpeg" style="text-align: center;max-width:100%; max-height:100%;">
+<br>
+<br>
             </div>
             <div class="col-sm-9">
                 <h4>Mr Ravinder Khanduja </h4>
@@ -187,8 +188,8 @@ maximum-scale=1.0, user-scalable=no"/>
         <br>
         <div class="row">
             <div class="col-sm-3">
-                <img src="https://image.shutterstock.com/image-vector/businessman-icon-260nw-561625345.jpg" height="250px"
-                     style="text-align: center;">
+                <img src="images/Akash.jpeg" style="text-align: center;max-width:100%; max-height:100%;">
+                <br><br>
             </div>
             <div class="col-sm-9">
                 <h4>Mr Akash Khanduja</h4>
