--- a/our-team.html
+++ b/our-team.html
@@ -144,7 +144,7 @@ maximum-scale=1.0, user-scalable=no"/>
         </div>
     </div>
 </div>
-<div class="body-text">
+<div class="body-text" style="text-align: justify; text-justify:inter-word;">
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-3">
